@@ -175,6 +175,7 @@ import org.thingsboard.server.service.solutions.data.solution.SolutionTemplateLe
 import org.thingsboard.server.service.solutions.data.solution.TenantSolutionTemplateDetails;
 import org.thingsboard.server.service.solutions.data.solution.TenantSolutionTemplateInfo;
 import org.thingsboard.server.service.solutions.data.solution.TenantSolutionTemplateInstructions;
+import org.thingsboard.server.service.solutions.trendz.data.TrendzEntityType;
 import org.thingsboard.server.service.telemetry.TelemetrySubscriptionService;
 
 import java.io.BufferedReader;
@@ -197,6 +198,7 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.TimeUnit;
@@ -245,6 +247,7 @@ public class DefaultSolutionService implements SolutionService {
     private final UserService userService;
     private final CalculatedFieldService calculatedFieldService;
     private final TbCalculatedFieldService tbCalculatedFieldService;
+    private final TrendzSolutionService trendzSolutionService;
 
     private final TbEdgeService tbEdgeService;
     private final EntityGroupService entityGroupService;
@@ -400,7 +403,20 @@ public class DefaultSolutionService implements SolutionService {
                     }
                 }
 
-                attributesService.removeAll(tenantId, tenantId, AttributeScope.SERVER_SCOPE, Arrays.asList(toCreatedEntitiesKey(solutionId), toStatusKey(solutionId), toInstructionsKey(solutionId))).get();
+                attributesService.removeAll(tenantId, tenantId, AttributeScope.SERVER_SCOPE, List.of(
+                        toCreatedEntitiesKey(solutionId), toStatusKey(solutionId), toInstructionsKey(solutionId))
+                ).get();
+
+                Optional<AttributeKvEntry> trendzAttributeOpt = this.attributesService.find(tenantId, tenantId, AttributeScope.SERVER_SCOPE, toTrendzEntitiesKey(solutionId)).get();
+                if (trendzAttributeOpt.isPresent()) {
+                    String jsonTrendzEntityIds = trendzAttributeOpt.get().getValueAsString();
+                    Map<TrendzEntityType, Set<UUID>> trendzEntityIds = new HashMap<>(Objects.requireNonNull(JacksonUtil.fromString(jsonTrendzEntityIds, new TypeReference<Map<TrendzEntityType, Set<UUID>>>() {
+                    })));
+                    this.trendzSolutionService.deleteTrendzSolution(getSolutionsDir(), user, tenantId, solutionId, trendzEntityIds);
+
+                    attributesService.removeAll(tenantId, tenantId, AttributeScope.SERVER_SCOPE, List.of(toTrendzEntitiesKey(solutionId))).get();
+                }
+
 
                 SolutionTemplateDetails solutionTemplate = solutionsMap.get(solutionId);
                 List<String> tsKeys = solutionTemplate.getTenantTelemetryKeys();
@@ -415,6 +431,7 @@ public class DefaultSolutionService implements SolutionService {
                 if (tsKeys != null && !tsKeys.isEmpty()) {
                     attributesService.removeAll(tenantId, tenantId, AttributeScope.SERVER_SCOPE, attrKeys).get();
                 }
+
             }
         } catch (Exception e) {
             log.error("[{}][{}] Failed to delete the solution", tenantId, solutionId, e);
@@ -493,6 +510,8 @@ public class DefaultSolutionService implements SolutionService {
     private SolutionInstallResponse doInstallSolution(User user, TenantId tenantId, String solutionId, HttpServletRequest request) {
         SolutionInstallContext ctx = new SolutionInstallContext(tenantId, solutionId, user, new TenantSolutionTemplateInstructions());
         try {
+            // Install TB configuration
+
             provisionRoles(ctx);
 
             provisionTenantDetails(ctx);
@@ -526,17 +545,7 @@ public class DefaultSolutionService implements SolutionService {
 
             provisionCalculatedFields(ctx);
 
-            launchEmulators(ctx, devices, assets);
-
             ctx.getSolutionInstructions().setDetails(prepareInstructions(ctx, request));
-
-            long ts = System.currentTimeMillis();
-            AttributeKvEntry createdEntitiesAttribute = new BaseAttributeKvEntry(new StringDataEntry(toCreatedEntitiesKey(solutionId), JacksonUtil.toString(ctx.getCreatedEntitiesList())), ts);
-            AttributeKvEntry statusAttribute = new BaseAttributeKvEntry(new BooleanDataEntry(toStatusKey(solutionId), true), ts);
-
-            TenantSolutionTemplateInstructions instructions = new TenantSolutionTemplateInstructions(ctx.getSolutionInstructions());
-            AttributeKvEntry instructionAttribute = new BaseAttributeKvEntry(new StringDataEntry(toInstructionsKey(solutionId), JacksonUtil.toString(instructions)), ts);
-            attributesService.save(tenantId, tenantId, AttributeScope.SERVER_SCOPE, Arrays.asList(createdEntitiesAttribute, statusAttribute, instructionAttribute));
 
             List<ReferenceableEntityDefinition> ruleChains = loadListOfEntitiesIfFileExists(ctx.getSolutionId(), "rule_chains.json", new TypeReference<>() {
             });
@@ -546,6 +555,30 @@ public class DefaultSolutionService implements SolutionService {
                 Thread.sleep(timeout);
                 finalUpdateRuleChains(ctx);
             }
+
+            // Install Trendz configuration
+            Map<TrendzEntityType, Set<UUID>> trendzEntityIds = this.trendzSolutionService.provisionTrendzSolution(getSolutionsDir(), ctx);
+
+
+            // Save configuration attributes
+            long ts = System.currentTimeMillis();
+            TenantSolutionTemplateInstructions instructions = new TenantSolutionTemplateInstructions(ctx.getSolutionInstructions());
+            AttributeKvEntry createdEntitiesAttribute = new BaseAttributeKvEntry(new StringDataEntry(toCreatedEntitiesKey(solutionId), JacksonUtil.toString(ctx.getCreatedEntitiesList())), ts);
+            AttributeKvEntry statusAttribute = new BaseAttributeKvEntry(new BooleanDataEntry(toStatusKey(solutionId), true), ts);
+            AttributeKvEntry instructionAttribute = new BaseAttributeKvEntry(new StringDataEntry(toInstructionsKey(solutionId), JacksonUtil.toString(instructions)), ts);
+            AttributeKvEntry createdTrendzEntitiesAttribute = new BaseAttributeKvEntry(new StringDataEntry(toTrendzEntitiesKey(ctx.getSolutionId()), JacksonUtil.toString(trendzEntityIds)), ts);
+
+            attributesService.save(tenantId, tenantId, AttributeScope.SERVER_SCOPE, Arrays.asList(
+                    createdEntitiesAttribute, statusAttribute, instructionAttribute, createdTrendzEntitiesAttribute
+            ));
+
+            // Run TB + Trendz data generation
+            Set<CompletableFuture<?>> emulatorFutures = launchEmulators(ctx, devices, assets);
+            CompletableFuture
+                    .allOf(emulatorFutures.toArray(new CompletableFuture[0]))
+                    .thenRun(() -> {
+                        this.trendzSolutionService.runTrendzSolutionDataGeneration(ctx, trendzEntityIds);
+                    });
 
             return new SolutionInstallResponse(ctx.getSolutionInstructions(), true);
         } catch (Throwable e) {
@@ -999,7 +1032,7 @@ public class DefaultSolutionService implements SolutionService {
         }
     }
 
-    private void launchEmulators(SolutionInstallContext ctx, Map<Device, DeviceDefinition> devicesMap, Map<Asset, AssetDefinition> assets) throws Exception {
+    private Set<CompletableFuture<?>> launchEmulators(SolutionInstallContext ctx, Map<Device, DeviceDefinition> devicesMap, Map<Asset, AssetDefinition> assets) throws Exception {
         List<EmulatorDefinition> emulatorDefinitions = loadListOfEntitiesIfFileExists(ctx.getSolutionId(), "device_emulators.json", new TypeReference<>() {
         });
         Map<String, EmulatorDefinition> deviceEmulators = emulatorDefinitions.stream().collect(Collectors.toMap(EmulatorDefinition::getName, Function.identity()));
@@ -1012,8 +1045,10 @@ public class DefaultSolutionService implements SolutionService {
                 });
 
 
+        Set<CompletableFuture<?>> resultFutures = new HashSet<>();
+
         for (var entry : devicesMap.entrySet().stream().filter(e -> StringUtils.isNotBlank(e.getValue().getEmulator())).collect(Collectors.toSet())) {
-            DeviceEmulatorLauncher.builder()
+            CompletableFuture<?> deviceEmulatorFuture = DeviceEmulatorLauncher.builder()
                     .entity(entry.getKey())
                     .emulatorDefinition(deviceEmulators.get(entry.getValue().getEmulator()))
                     .oldTelemetryExecutor(emulatorExecutor)
@@ -1022,14 +1057,17 @@ public class DefaultSolutionService implements SolutionService {
                     .tbQueueProducerProvider(tbQueueProducerProvider)
                     .serviceInfoProvider(serviceInfoProvider)
                     .tsSubService(tsSubService)
-                    .build().launch();
+                    .build()
+                    .launch();
+
+            resultFutures.add(deviceEmulatorFuture);
         }
 
         Map<String, EmulatorDefinition> assetEmulators = loadListOfEntitiesIfFileExists(ctx.getSolutionId(), "asset_emulators.json", new TypeReference<List<EmulatorDefinition>>() {
         }).stream().collect(Collectors.toMap(EmulatorDefinition::getName, Function.identity()));
 
         for (var entry : assets.entrySet().stream().filter(e -> StringUtils.isNotBlank(e.getValue().getEmulator())).collect(Collectors.toSet())) {
-            AssetEmulatorLauncher.builder()
+            CompletableFuture<?> assetEmulatorFuture = AssetEmulatorLauncher.builder()
                     .entity(entry.getKey())
                     .emulatorDefinition(assetEmulators.get(entry.getValue().getEmulator()))
                     .oldTelemetryExecutor(emulatorExecutor)
@@ -1038,8 +1076,13 @@ public class DefaultSolutionService implements SolutionService {
                     .tbQueueProducerProvider(tbQueueProducerProvider)
                     .serviceInfoProvider(serviceInfoProvider)
                     .tsSubService(tsSubService)
-                    .build().launch();
+                    .build()
+                    .launch();
+
+            resultFutures.add(assetEmulatorFuture);
         }
+
+        return resultFutures;
     }
 
     protected void provisionTenantDetails(SolutionInstallContext ctx) throws Exception {
@@ -1745,4 +1788,7 @@ public class DefaultSolutionService implements SolutionService {
         return solutionId + "_" + "instructions";
     }
 
+    private String toTrendzEntitiesKey(String solutionId) {
+        return solutionId + "_trendz_entities";
+    }
 }
